--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   </main>
 
   <footer class="footer">
-    <div>© Dashboard demo • Later: Supabase + n8n events</div>
+    <div>© VBJ Services 2026</div>
   </footer>
 
   <script type="module" src="./app.js"></script>
