--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Chatbot Dashboard</title>
   <link rel="stylesheet" href="./styles.css" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </head>
 
 <body>
@@ -194,7 +195,5 @@
   <footer class="footer">
     <div>© VBJ Services 2026</div>
   </footer>
-
-  <script type="module" src="./app.js"></script>
 </body>
 </html>
