Juiste data weergave in statistics

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
       </div>
 
       <div class="kpi card">
-        <div class="kpi-label">Conversations</div>
+        <div class="kpi-label">Total Chats</div>
         <div class="kpi-value" id="kpiConvos">—</div>
-        <div class="kpi-help">Aantal chats in periode</div>
+        <div class="kpi-help">Total chats during period</div>
       </div>
 
       <div class="kpi card">
