Bot connectivity established Bot status updated according to webhook status down/up

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <div class="pill" id="versionPill">Version: v1</div>
         <div class="pill" id="lastUpdatePill">Last update: —</div>
         <div class="pill status ok" id="statusPill">Status: Running</div>
+        <span id="chatbotPill" class="pill status warn">Chatbot: Loading</span>
       </div>
     </section>
 
