got rid of checkmar comments

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <canvas id="chartOutcomes"></canvas>
       </div>
 
-      <!-- ✅ Updated: Latency header met toggle -->
+      <!-- Latency header met toggle -->
       <div class="card">
         <div class="card-head">
           <div class="card-title" id="latencyTitle">Latency (p95, s)</div>
