- Changes database connection and chatbot pills to assistent and database

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
           <!-- Dashboard overview pills (unique IDs live here) -->
           <div class="filters-meta">
             <div class="pill" id="lastUpdatePill">Last update: —</div>
-            <div class="pill status ok" id="statusPill">Status: Online</div>
-            <span id="chatbotPill" class="pill status warn">Chatbot: Running</span>
+            <div class="pill status ok" id="statusPill">Database: Connected</div>
+            <span id="chatbotPill" class="pill status warn">Assistent: Online</span>
           </div>
         </section>
 
