Performance dashboard reads analytics from database filled in in side bar

--- a/index.html
+++ b/index.html
@@ -296,6 +296,12 @@
         <label class="connection-label" for="supabaseKeyInput">Anon key</label>
         <input id="supabaseKeyInput" class="connection-input" placeholder="Anon key" />
 
+        <label class="remember-toggle" for="rememberConnection">
+          <input type="checkbox" id="rememberConnection" />
+          <span class="remember-track" aria-hidden="true"></span>
+          <span class="remember-text">Remember this device</span>
+        </label>
+
         <button class="btn btn-primary connection-save" id="connectionSaveBtn" type="button">Save</button>
       </div>
     </div>
