- Added new day values to period drop down - User can browse through 1D till 1Y now. Every timestamp in between is kept - Updated login page descriptions points 1,2,3

--- a/login.html
+++ b/login.html
@@ -40,17 +40,17 @@
             <div>
               <div class="step-kicker">1</div>
               <div class="step-title">Create your account</div>
-              <div class="step-copy">We will verify your email before access.</div>
+              <div class="step-copy">Seamlessly connect and view your data with our professional analytics.</div>
             </div>
             <div>
               <div class="step-kicker">2</div>
-              <div class="step-title">Connect Your Database</div>
-              <div class="step-copy">Gain access to your valuable data.</div>
+              <div class="step-title">Review your data</div>
+              <div class="step-copy">Get the latest conversations between Assistant and Client, in real-time.</div>
             </div>
             <div>
               <div class="step-kicker">3</div>
-              <div class="step-title">Review performance</div>
-              <div class="step-copy">See success and escalation trends fast.</div>
+              <div class="step-title">Easy setup</div>
+              <div class="step-copy">Convert your data and save yourself a headache.</div>
             </div>
           </div>
         </div>
