--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
             <div class="field">
               <label>Period</label>
               <select id="rangeSelect">
+                <option value="1">Last 24 hours</option>
                 <option value="7">Last 7 days</option>
                 <option value="14">Last 14 days</option>
                 <option value="30" selected>Last 30 days</option>
+                <option value="90">Last 90 days</option>
+                <option value="365">Last 1 year</option>
               </select>
             </div>
 
