- Added website icon right next to supabase account lined text in supabase connection overlay - Added hover detection which changes the lined text's color

--- a/index.html
+++ b/index.html
@@ -284,7 +284,15 @@
               href="https://supabase.com/dashboard/org"
               target="_blank"
               rel="noopener noreferrer"
-            >Supabase account</a>
+            >Supabase account
+              <span class="link-icon" aria-hidden="true">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+                  <path d="M14 3h7v7"></path>
+                  <path d="M10 14L21 3"></path>
+                  <rect x="3" y="7" width="14" height="14" rx="3"></rect>
+                </svg>
+              </span>
+            </a>
           </div>
         </div>
 
